[gd_scene load_steps=16 format=3 uid="uid://b0wysm6c2nqgj"]

[ext_resource type="Script" uid="uid://bff4evm16ro7l" path="res://player.gd" id="1_26y8w"]
[ext_resource type="Texture2D" uid="uid://fn3ats00hpd7" path="res://assets/sokoban_character.png" id="2_47llq"]
[ext_resource type="AudioStream" uid="uid://jbga31uj3cxq" path="res://assets/sounds/footsteps.wav" id="3_hqtel"]
[ext_resource type="Script" uid="uid://bbf63mexhoslk" path="res://systems/interacting.gd" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://db4750c47tjbb" path="res://resources/footsteps.tres" id="4_sweqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tia2a"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_sweqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_c7mrc"]
resource_name = "down"
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 6, 8, 6]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0128745,
"stream": ExtResource("3_hqtel")
}],
"times": PackedFloat32Array(0.0666667)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "jump"
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 17, 10, 14, 1]
}

[sub_resource type="Animation" id="Animation_88f3v"]
resource_name = "left"
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 21, 23, 21]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.74,
"start_offset": 2.47,
"stream": ExtResource("3_hqtel")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_7vjps"]
resource_name = "right"
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 18, 20, 18]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 2.75,
"start_offset": 0.47,
"stream": ExtResource("4_sweqy")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_1mx5g"]
resource_name = "up"
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 9, 11, 9]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 2.35,
"start_offset": 0.85,
"stream": ExtResource("4_sweqy")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3qh4"]
_data = {
&"RESET": SubResource("Animation_sweqy"),
&"down": SubResource("Animation_c7mrc"),
&"jump": SubResource("Animation_hqtel"),
&"left": SubResource("Animation_88f3v"),
&"right": SubResource("Animation_7vjps"),
&"up": SubResource("Animation_1mx5g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(60, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(96, 60)

[node name="Player" type="Area2D"]
z_index = 1
script = ExtResource("1_26y8w")

[node name="Sprite2d" type="Sprite2D" parent="."]
texture = ExtResource("2_47llq")
hframes = 6
vframes = 4
frame = 6

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tia2a")

[node name="RayCast_move" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RayCast_move")
libraries = {
&"": SubResource("AnimationLibrary_e3qh4")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]

[node name="Interacting" type="Node2D" parent="."]
script = ExtResource("3_i3pqv")

[node name="Range" type="Area2D" parent="Interacting"]

[node name="collision-NS" type="CollisionShape2D" parent="Interacting/Range"]
shape = SubResource("RectangleShape2D_onrkg")

[node name="collision-EW" type="CollisionShape2D" parent="Interacting/Range"]
shape = SubResource("RectangleShape2D_i3pqv")

[node name="InteractionLabel" type="Label" parent="Interacting"]
offset_left = -71.0
offset_top = -51.0
offset_right = 56.0
offset_bottom = -28.0
size_flags_horizontal = 4
text = "interaction label"
horizontal_alignment = 2

[connection signal="area_entered" from="Interacting/Range" to="Interacting" method="_on_range_area_entered"]
[connection signal="area_exited" from="Interacting/Range" to="Interacting" method="_on_range_area_exited"]
